mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongo-server
 labels:
   app: mongolearn
spec:
 selector:
   matchLabels:
     app: mongolearn
 replicas: 1
 template:
   metadata:
     labels:
       app: mongolearn
   spec:
     containers:
     - name: mongo
       image: mongo:6
       ports:
         - containerPort: 27017  
---
apiVersion: v1
kind: Service
metadata:
 name: mongolearn-service
spec:
 externalIPs:
 - 192.168.49.2
 selector:
   app: mongolearn
 type: LoadBalancer
 ports:
 - protocol: TCP
   port: 27018   
   targetPort: 27017
