ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: number-plate
spec:
  rules:
  - host: www.electricvechile.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 8088
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
